# 2048

./: .gitignore  README.md  app.py  pyproject.toml  utils.py
z048/: app.py
