[tool.poetry.scripts]
z048 = "z048.app:cli"

[tool.poetry]
name = "z048"
version = "0.1.1"
description = "The game 2048 - CLI version!!"
authors = ["Sivan Becker <sivanbecker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.5"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pudb = "^2019.2"
ipython = "^7.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
